# GestionMotekaTaller

./: .replit  pyproject.toml  replit.md
Gestion_MOTEKA/: README.md
Gestion_MOTEKA/Backend/: app.py  requirements.txt
Gestion_MOTEKA/Backend/api/: auth_routes.py  ordenes_routes.py  reportes_routes.py  reportes_trabajo_routes.py
Gestion_MOTEKA/Backend/models/: ordenes.py  reportes.py
Gestion_MOTEKA/Frontend/: vite.config.ts
Gestion_MOTEKA/Frontend/src/: router.tsx
Gestion_MOTEKA/Frontend/src/components/: AppIcon.tsx
Gestion_MOTEKA/Frontend/src/diseños CSS/: login.css  usuarios.css
Gestion_MOTEKA/Frontend/src/layouts/: AuthLayout.tsx  PublicLayout.tsx
Gestion_MOTEKA/Frontend/src/pages/: Clientes.tsx  Herramientas.tsx  Home.tsx  Login.tsx  Marcas.tsx  Modelos.tsx  Motos.tsx  Ordenes.tsx  Usuarios.tsx
attached_assets/: Pasted-Sistema-de-Gesti-n-de-Taller-de-Motocicletas-MOTEKA-Objetivo-Genera-un-proyecto-full-stack-listo-1761421953008_1761421953011.txt
