[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "flask-jwt-extended==4.7.1",
    "flask-login>=0.6.3",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf>=1.2.2",
    "openpyxl==3.1.5",
    "psycopg[binary]==3.2.1",
    "python-dotenv==1.0.1",
    "reportlab==4.2.2",
    "sqlalchemy==2.0.31",
    "werkzeug==3.0.3",
]
